# seatrac-asv-controller

./: .env  .gitignore  .gitmodules  Dockerfile  Dockerfile.foxglove  Dockerfile.julia  Dockerfile.setup  LICENSE  README.md  docker-compose.controller.yml  docker-compose.foxglove.yml  docker-compose.julia.yml  docker-compose.mocks.yml  docker-compose.sensor-drivers.yml  docker-compose.setup.yml  docker-compose.sil.yml  docker-compose.test.yml  docker-compose.yml
docs/: SeaTrac Interface Rev4.docx
juliadeps/: Project.toml
src/asv_controller/: package.xml  setup.cfg  setup.py
src/asv_controller/asv_controller/: AsvErgoControl.py  ParamEstimator.py  QMapPub.py  TargetQMapPub.py  TransectControl.py  WHatPub.py  juliatest.py
src/asv_controller/jl_src/: Controller.jl  SOC_Controller.jl  SyntheticData.jl  jordan_lake_domain.jl  kf.jl  simulator_ST.jl  solar_insolation.jl  transects.jl  variograms.jl
src/asv_messages/: CMakeLists.txt  package.xml
src/asv_messages/include/asv_messages/: AttitudeMessage.h  ControlMessage.h  DatetimeMessage.h  GPSMessage.h  ImuMessage.h  PowerLevelMessage.h  WindMessage.h
src/asv_messages/src/: AttitudeMessage.cpp  ControlMessage.cpp  DatetimeMessage.cpp  GPSMessage.cpp  ImuMessage.cpp  PowerLevelMessage.cpp  WindMessage.cpp
src/asv_model/: CMakeLists.txt  package.xml
src/asv_model/src/: asv_state.cpp
src/asv_sensors/: CMakeLists.txt  package.xml
src/asv_sensors/include/asv_sensors/: ControlPublisher.h  GPSSensorDriver.h  ImuSensorDriver.h  PowerLevelSensorDriver.h  SensorPacketPublisher.h  WindSensorDriver.h
src/asv_sensors/launch/: sensor_drivers.xml
src/asv_sensors/src/: AttitudeSensorDriver.cpp  ControlPublisher.cpp  GPSSensorDriver.cpp  ImuSensorDriver.cpp  MeasurementPacketPublisher.cpp  MockIMU.cpp  PowerLevelSensorDriver.cpp  SensorPacketPublisher.cpp  WindSensorDriver.cpp  main.cpp
src/asv_sensors/src/mocks/: MockAttitude.cpp  MockGPS.cpp  MockIMU.cpp  MockPowerLevel.cpp  MockWind.cpp
src/asv_utils/: CMakeLists.txt  package.xml
src/asv_utils/cmake/: ConfigExtras.cmake
src/asv_utils/include/asv_utils/networking/: MessageReceiver.h  UDPClient.h  UDPSender.h
src/asv_utils/include/asv_utils/utils/: utils.h
src/asv_utils/src/networking/: UDPClient.cpp  UDPSender.cpp
src/asv_utils/src/utils/: utils.cpp
src/environment/: CMakeLists.txt  package.xml
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: AsvGps.msg  AsvImu.msg  Attitude.msg  Commands.msg  ParamEst.msg  PowerLevel.msg  SensorData.msg  Wind.msg
src/sensors/: CMakeLists.txt  package.xml
src/sensors/include/networking/: UDPClient.h
src/sensors/include/utils/: utils.h
src/sensors/src/: main.cpp
