<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_sensors</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abhinavspratap@gmail.com">Abhinav Pratap</maintainer>
  <license>TODO: License declaration</license>

  <depend>boost</depend>
  <depend>asv_utils</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>asv_messages</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
